iter_language/tests/corpus/invalid/unknown-field.iter.err.snap
---
source: iter_language/tests/conformance.rs
description: unknown-field.iter
---
Error: unknown field `flavor` in queue memory
   ╭─[unknown-field.iter:1:16]
   │
 1 │ queue memory { flavor = "chocolate" }
   │                ───┬──  
   │                   ╰──── unknown field `flavor` in queue memory
───╯

Warning: flat Iterfile syntax is deprecated — use named definitions and runner binding
   ╭─[unknown-field.iter:1:1]
   │
 1 │ queue memory { flavor = "chocolate" }
   │ │ 
   │ ╰─ flat Iterfile syntax is deprecated — use named definitions and runner binding
───╯
